# kitware-resonant.github.io

./: .gitignore  CNAME  README.md  pyproject.toml  requirements_doc.txt
.github/workflows/: doc.yml  pages.yml
doc/: Makefile
doc/source/: conf.py  index.rst  success.rst
doc/source/explanation/: django.rst  girder4.rst  girders.rst  index.rst
doc/source/tutorials/: ejection.rst  index.rst
resonant_docs/: conf.py  index.rst
resonant_docs/explanation/: resonant.rst
resonant_docs/source/: conf.py  index.rst
resonant_docs/source/explanation/: index.rst  resonant.rst
