[tool.poetry]
name = "resonant_docs"
version = "0.1.0"
description = "Resonant marketing website"
authors = ["Kitware D&A Team <data-analytics@kitware.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.5"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.6.0"
furo = "^2024.5.6"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
sphinx-autobuild = "^2024.4.16"

[tool.taskipy.tasks]
pre_build = "rm -rf ./build"
build = "sphinx-build -M html resonant_docs build"
watch = "sphinx-autobuild --port 0 resonant_docs build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
